add permission api
