# internal/controller/user_controller.go
@@ -4,8 +4,6 @@ import (
 	"gin-sample-framework/internal/model"
 	"gin-sample-framework/internal/service"
 	"gin-sample-framework/pkg/logger"
-	"gin-sample-framework/pkg/permission"
-	"net/http"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
@@ -19,28 +17,9 @@ type UserController struct {
 
 func NewUserController(logger logger.Logger, userService *service.UserService) *UserController {
 	return &UserController{
-		baseController: baseController{
-			Menu: menu{
-				Name:  "user",
-				Route: "/user",
-			},
-		},
 		logger:      logger,
 		userService: userService,
 	}
-}
-
-func (ctrl *UserController) Init(r *gin.RouterGroup) {
-	model.AppendMenuResourcesList("", "", ctrl.Menu.Name, ctrl.Menu.Route, permission.Create, permission.Delete, permission.Update, permission.Read)
-	group := r.Group(ctrl.Menu.Route)
-	permission.Permission.MakeGroup(ctrl.Menu.Route, ctrl.Menu.Name).Append(group,
-		permission.NewRoutePerm("/create", http.MethodPost, permission.Create, ctrl.Create),
-		permission.NewRoutePerm("/detail/:user_id", http.MethodGet, permission.Read, ctrl.Detail),
-		permission.NewRoutePerm("/update", http.MethodPut, permission.Update, ctrl.Update),
-		permission.NewRoutePerm("/delete/:user_id", http.MethodDelete, permission.Delete, ctrl.Delete),
-		permission.NewRoutePerm("/list", http.MethodGet, permission.Read, ctrl.List),
-	)
-
 }
 
 // Create UserController
@@ -52,7 +31,7 @@ func (ctrl *UserController) Init(r *gin.RouterGroup) {
 // @Param        user  body  model.UserCreateReq  true  "user"
 // @Success      200  {object}  utils.GeneralResponseModel{data=model.UserCreateResp}  "response"
 // @Failure      400  {object}  utils.GeneralResponseModel
-// @Router       /v1/user/create [post]
+// @Router       /v1/system/user/create [post]
 func (ctrl *UserController) Create(c *gin.Context) {
 	var req model.UserCreateReq
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -78,7 +57,7 @@ func (ctrl *UserController) Create(c *gin.Context) {
 // @Param        user_id  path  string  true  "user_id"
 // @Success      200  {object}  utils.GeneralResponseModel{data=model.UserDetailResp}  "response"
 // @Failure      400  {object}  utils.GeneralResponseModel
-// @Router       /v1/user/detail/{user_id} [get]
+// @Router       /v1/system/user/detail/{user_id} [get]
 func (ctrl *UserController) Detail(c *gin.Context) {
 	userID, err := strconv.Atoi(c.Param("user_id"))
 	if err != nil {
@@ -104,7 +83,7 @@ func (ctrl *UserController) Detail(c *gin.Context) {
 // @Param        user  body  model.UserUpdateReq  true  "user"
 // @Success      200  {object}  utils.GeneralResponseModel "response"
 // @Failure      400  {object}  utils.GeneralResponseModel
-// @Router       /v1/user/update [put]
+// @Router       /v1/system/user/update [put]
 func (ctrl *UserController) Update(c *gin.Context) {
 	var req model.UserUpdateReq
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -129,7 +108,7 @@ func (ctrl *UserController) Update(c *gin.Context) {
 // @Param        user_id  path  string  true  "user_id"
 // @Success      200  {object}  utils.GeneralResponseModel  "response"
 // @Failure      400  {object}  utils.GeneralResponseModel
-// @Router       /v1/user/delete/{user_id} [delete]
+// @Router       /v1/system/user/delete/{user_id} [delete]
 func (ctrl *UserController) Delete(c *gin.Context) {
 	userID, err := strconv.Atoi(c.Param("user_id"))
 	if err != nil {
@@ -155,7 +134,7 @@ func (ctrl *UserController) Delete(c *gin.Context) {
 // @Param        limit  query  int  false  "limit"
 // @Success      200  {object}  utils.GeneralResponseModel{data=model.UserDetailListResponse}  "response"
 // @Failure      400  {object}  utils.GeneralResponseModel
-// @Router       /v1/user/list [get]
+// @Router       /v1/system/user/list [get]
 func (ctrl *UserController) List(c *gin.Context) {
 	page, _ := strconv.Atoi(c.Query("page"))
 	limit, _ := strconv.Atoi(c.Query("limit"))
